feat: ui update and mobile responsive view

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,30 @@
     <div id="root"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- <script
+      charset="utf-8"
+      type="text/javascript"
+      src="//js-eu1.hsforms.net/forms/embed/v2.js"
+    ></script>
+    <script>
+      hbspt.forms.create({
+        region: "eu1",
+        portalId: "26865383",
+        formId: "20b2ce74-2989-41b4-867a-59f53951de77",
+      });
+    </script> -->
+
+    <!-- Start of HubSpot Embed Code -->
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js-eu1.hs-scripts.com/26865383.js"
+    ></script>
+    <!-- End of HubSpot Embed Code -->
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
