feat: requested changes on evernotes

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script
+    <!-- <script
       charset="utf-8"
       type="text/javascript"
       src="//js-eu1.hsforms.net/forms/embed/v2.js"
@@ -76,7 +76,7 @@
         portalId: "26865383",
         formId: "20b2ce74-2989-41b4-867a-59f53951de77",
       });
-    </script>
+    </script> -->
 
     <!-- Start of HubSpot Embed Code -->
     <script
